--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -71,7 +71,7 @@
       {{!-- {{> search}} --}}
       <div class="navbar-end">
         <a href="{{{siteRootPath}}}/headless/" class="navbar-item headless">Headless docs</a>
-        <a href="{{{siteRootPath}}}/product-docs/6.3/" class="navbar-item headless">DX Core</a>
+        <a href="{{{siteRootPath}}}/product-docs/" class="navbar-item headless">DX Core</a>
         <a href="{{{siteRootPath}}}/paas/" class="navbar-item headless">DX Cloud</a>
         <div class="navbar-item navbar-item--button">
           <span class="control">
@@ -116,7 +116,7 @@
 
       <div class="navbar-end">
         <a href="https://ha.magnolia-cms.com/" class="navbar-item headless" target="_blank">Headless Accelerator <i class="fa fa-external-link" aria-hidden="true" style="padding-left: 3px;"></i></a>
-        <a href="{{{siteRootPath}}}/product-docs/6.3/" class="navbar-item headless">DX Core</a>
+        <a href="{{{siteRootPath}}}/product-docs/" class="navbar-item headless">DX Core</a>
         <a href="{{{siteRootPath}}}/paas/" class="navbar-item headless">DX Cloud</a>
         <div class="navbar-item navbar-item--button">
           <span class="control">
@@ -298,7 +298,7 @@
       <div class="navbar-end">
         <a href="{{{siteRootPath}}}/paas/changelog/" class="navbar-item"><i class="fa fa-list-alt" aria-hidden="true" style="margin-right: 5px;"></i> Changelog</a>
         <a href="{{{siteRootPath}}}/paas/support/" class="navbar-item"><i class="fa fa-life-ring" aria-hidden="true" style="margin-right: 5px;"></i> Support</a>
-        <a href="{{{siteRootPath}}}/product-docs/6.3/" class="navbar-item">DX Core</a>
+        <a href="{{{siteRootPath}}}/product-docs/" class="navbar-item">DX Core</a>
         {{!-- <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item">PaaS</a> --}}
         <div class="navbar-item navbar-item--button">
           <span class="control">
@@ -355,7 +355,7 @@
             <a href="{{{siteRootPath}}}/product-docs/6.3/developing/" class="navbar-item">Developers</a>
             <a href="{{{siteRootPath}}}/product-docs/6.3/modules/" class="navbar-item">Modules</a>
             <a href="{{{siteRootPath}}}/product-docs/6.3/developing/api/" class="navbar-item">APIs</a>
-            <a href="{{{siteRootPath}}}/magnolia-cli/4.x/" class="navbar-item">CLI</a>
+            <a href="{{{siteRootPath}}}/magnolia-cli/" class="navbar-item">CLI</a>
             <a href="{{{siteRootPath}}}/product-docs/6.3/authoring/" class="navbar-item">Authors</a>
           </div>
         </div>
@@ -417,7 +417,7 @@
             <a href="{{{siteRootPath}}}/product-docs/6.2/developing/" class="navbar-item">Developers</a>
             <a href="{{{siteRootPath}}}/product-docs/6.2/modules/" class="navbar-item">Modules</a>
             <a href="{{{siteRootPath}}}/product-docs/6.2/developing/api/" class="navbar-item">APIs</a>
-            <a href="{{{siteRootPath}}}/magnolia-cli/4.x/" class="navbar-item">CLI</a>
+            <a href="{{{siteRootPath}}}/magnolia-cli/" class="navbar-item">CLI</a>
             <a href="{{{siteRootPath}}}/product-docs/6.2/authoring/" class="navbar-item">Authors</a>
           </div>
         </div>
@@ -467,18 +467,18 @@
     <div id="topbar-nav" class="navbar-menu">
 
       <div class="navbar-end">
-        <a href="{{{siteRootPath}}}/product-docs/6.2/releases/" class="navbar-item">Releases</a>
+        <a href="{{{siteRootPath}}}/product-docs/releases/" class="navbar-item">Releases</a>
         <div class="navbar-item has-dropdown is-hoverable">
           <span class="navbar-link">DX Core
             <span class="icon-wrapper"><i class="arrow down"></i></span>
           </span>
           <div class="navbar-dropdown">
-            <a href="{{{siteRootPath}}}/product-docs/6.2/getting-started-with-magnolia/" class="navbar-item">Get Started</a>
-            <a href="{{{siteRootPath}}}/product-docs/6.2/developing/" class="navbar-item">Developers</a>
-            <a href="{{{siteRootPath}}}/product-docs/6.2/modules/" class="navbar-item">Modules</a>
-            <a href="{{{siteRootPath}}}/product-docs/6.2/developing/api/" class="navbar-item">APIs</a>
-            <a href="{{{siteRootPath}}}/magnolia-cli/4.x/" class="navbar-item">CLI</a>
-            <a href="{{{siteRootPath}}}/product-docs/6.2/authoring/" class="navbar-item">Authors</a>
+            <a href="{{{siteRootPath}}}/product-docs/getting-started-with-magnolia/" class="navbar-item">Get Started</a>
+            <a href="{{{siteRootPath}}}/product-docs/developing/" class="navbar-item">Developers</a>
+            <a href="{{{siteRootPath}}}/product-docs/modules/" class="navbar-item">Modules</a>
+            <a href="{{{siteRootPath}}}/product-docs/developing/api/" class="navbar-item">APIs</a>
+            <a href="{{{siteRootPath}}}/magnolia-cli/" class="navbar-item">CLI</a>
+            <a href="{{{siteRootPath}}}/product-docs/authoring/" class="navbar-item">Authors</a>
           </div>
         </div>
         <a href="{{{siteRootPath}}}/paas/" class="navbar-item">DX Cloud</a>
@@ -528,18 +528,18 @@
     <div id="topbar-nav" class="navbar-menu">
 
       <div class="navbar-end">
-        <a href="{{{siteRootPath}}}/product-docs/6.3/releases/" class="navbar-item">Releases</a>
+        <a href="{{{siteRootPath}}}/product-docs/releases/" class="navbar-item">Releases</a>
         <div class="navbar-item has-dropdown is-hoverable">
           <span class="navbar-link">DX Core
             <span class="icon-wrapper"><i class="arrow down"></i></span>
           </span>
           <div class="navbar-dropdown">
-            <a href="{{{siteRootPath}}}/product-docs/6.3/getting-started-with-magnolia/" class="navbar-item">Get Started</a>
-            <a href="{{{siteRootPath}}}/product-docs/6.3/developing/" class="navbar-item">Developers</a>
-            <a href="{{{siteRootPath}}}/product-docs/6.3/modules/" class="navbar-item">Modules</a>
-            <a href="{{{siteRootPath}}}/product-docs/6.3/developing/api/" class="navbar-item">APIs</a>
-            <a href="{{{siteRootPath}}}/magnolia-cli/4.x/" class="navbar-item">CLI</a>
-            <a href="{{{siteRootPath}}}/product-docs/6.3/authoring/" class="navbar-item">Authors</a>
+            <a href="{{{siteRootPath}}}/product-docs/getting-started-with-magnolia/" class="navbar-item">Get Started</a>
+            <a href="{{{siteRootPath}}}/product-docs/developing/" class="navbar-item">Developers</a>
+            <a href="{{{siteRootPath}}}/product-docs/modules/" class="navbar-item">Modules</a>
+            <a href="{{{siteRootPath}}}/product-docs/developing/api/" class="navbar-item">APIs</a>
+            <a href="{{{siteRootPath}}}/magnolia-cli/" class="navbar-item">CLI</a>
+            <a href="{{{siteRootPath}}}/product-docs/authoring/" class="navbar-item">Authors</a>
           </div>
         </div>
         <a href="{{{siteRootPath}}}/paas/" class="navbar-item">DX Cloud</a>
@@ -589,18 +589,18 @@
     <div id="topbar-nav" class="navbar-menu">
 
       <div class="navbar-end">
-        <a href="{{{siteRootPath}}}/product-docs/6.3/releases/" class="navbar-item">Releases</a>
+        <a href="{{{siteRootPath}}}/product-docs/releases/" class="navbar-item">Releases</a>
         <div class="navbar-item has-dropdown is-hoverable">
           <span class="navbar-link">DX Core
             <span class="icon-wrapper"><i class="arrow down"></i></span>
           </span>
           <div class="navbar-dropdown">
-            <a href="{{{siteRootPath}}}/product-docs/6.3/getting-started-with-magnolia/" class="navbar-item">Get Started</a>
-            <a href="{{{siteRootPath}}}/product-docs/6.3/developing/" class="navbar-item">Developers</a>
-            <a href="{{{siteRootPath}}}/product-docs/6.3/modules/" class="navbar-item">Modules</a>
-            <a href="{{{siteRootPath}}}/product-docs/6.3/developing/api/" class="navbar-item">APIs</a>
-            <a href="{{{siteRootPath}}}/magnolia-cli/4.x/" class="navbar-item">CLI</a>
-            <a href="{{{siteRootPath}}}/product-docs/6.3/authoring/" class="navbar-item">Authors</a>
+            <a href="{{{siteRootPath}}}/product-docs/getting-started-with-magnolia/" class="navbar-item">Get Started</a>
+            <a href="{{{siteRootPath}}}/product-docs/developing/" class="navbar-item">Developers</a>
+            <a href="{{{siteRootPath}}}/product-docs/modules/" class="navbar-item">Modules</a>
+            <a href="{{{siteRootPath}}}/product-docs/developing/api/" class="navbar-item">APIs</a>
+            <a href="{{{siteRootPath}}}/magnolia-cli/" class="navbar-item">CLI</a>
+            <a href="{{{siteRootPath}}}/product-docs/authoring/" class="navbar-item">Authors</a>
           </div>
         </div>
         <a href="{{{siteRootPath}}}/paas/" class="navbar-item">DX Cloud</a>
@@ -650,18 +650,18 @@
     <div id="topbar-nav" class="navbar-menu">
 
       <div class="navbar-end">
-        <a href="{{{siteRootPath}}}/product-docs/6.3/releases/" class="navbar-item">Releases</a>
+        <a href="{{{siteRootPath}}}/product-docs/releases/" class="navbar-item">Releases</a>
         <div class="navbar-item has-dropdown is-hoverable">
           <span class="navbar-link">DX Core
             <span class="icon-wrapper"><i class="arrow down"></i></span>
           </span>
           <div class="navbar-dropdown">
-            <a href="{{{siteRootPath}}}/product-docs/6.3/getting-started-with-magnolia/" class="navbar-item">Get Started</a>
-            <a href="{{{siteRootPath}}}/product-docs/6.3/developing/" class="navbar-item">Developers</a>
-            <a href="{{{siteRootPath}}}/product-docs/6.3/modules/" class="navbar-item">Modules</a>
-            <a href="{{{siteRootPath}}}/product-docs/6.3/developing/api/" class="navbar-item">APIs</a>
-            <a href="{{{siteRootPath}}}/magnolia-cli/4.x/" class="navbar-item">CLI</a>
-            <a href="{{{siteRootPath}}}/product-docs/6.3/authoring/" class="navbar-item">Authors</a>
+            <a href="{{{siteRootPath}}}/product-docs/getting-started-with-magnolia/" class="navbar-item">Get Started</a>
+            <a href="{{{siteRootPath}}}/product-docs/developing/" class="navbar-item">Developers</a>
+            <a href="{{{siteRootPath}}}/product-docs/modules/" class="navbar-item">Modules</a>
+            <a href="{{{siteRootPath}}}/product-docs/developing/api/" class="navbar-item">APIs</a>
+            <a href="{{{siteRootPath}}}/magnolia-cli/" class="navbar-item">CLI</a>
+            <a href="{{{siteRootPath}}}/product-docs/authoring/" class="navbar-item">Authors</a>
           </div>
         </div>
         <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item">DX Cloud</a>
@@ -708,18 +708,18 @@
     <div id="topbar-nav" class="navbar-menu">
 
       <div class="navbar-end">
-        <a href="{{{siteRootPath}}}/product-docs/6.3/releases/" class="navbar-item">Releases</a>
+        <a href="{{{siteRootPath}}}/product-docs/releases/" class="navbar-item">Releases</a>
         <div class="navbar-item has-dropdown is-hoverable">
           <span class="navbar-link">DX Core
             <span class="icon-wrapper"><i class="arrow down"></i></span>
           </span>
           <div class="navbar-dropdown">
-            <a href="{{{siteRootPath}}}/product-docs/6.3/getting-started-with-magnolia/" class="navbar-item">Get Started</a>
-            <a href="{{{siteRootPath}}}/product-docs/6.3/developing/" class="navbar-item">Developers</a>
-            <a href="{{{siteRootPath}}}/product-docs/6.3/modules/" class="navbar-item">Modules</a>
-            <a href="{{{siteRootPath}}}/product-docs/6.3/developing/api/" class="navbar-item">APIs</a>
-            <a href="{{{siteRootPath}}}/magnolia-cli/4.x/" class="navbar-item">CLI</a>
-            <a href="{{{siteRootPath}}}/product-docs/6.3/authoring/" class="navbar-item">Authors</a>
+            <a href="{{{siteRootPath}}}/product-docs/getting-started-with-magnolia/" class="navbar-item">Get Started</a>
+            <a href="{{{siteRootPath}}}/product-docs/developing/" class="navbar-item">Developers</a>
+            <a href="{{{siteRootPath}}}/product-docs/modules/" class="navbar-item">Modules</a>
+            <a href="{{{siteRootPath}}}/product-docs/developing/api/" class="navbar-item">APIs</a>
+            <a href="{{{siteRootPath}}}/magnolia-cli/" class="navbar-item">CLI</a>
+            <a href="{{{siteRootPath}}}/product-docs/authoring/" class="navbar-item">Authors</a>
           </div>
         </div>
         <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item">DX Cloud</a>
@@ -766,18 +766,18 @@
     <div id="topbar-nav" class="navbar-menu">
 
       <div class="navbar-end">
-        <a href="{{{siteRootPath}}}/product-docs/6.2/releases/" class="navbar-item">Releases</a>
+        <a href="{{{siteRootPath}}}/product-docs/releases/" class="navbar-item">Releases</a>
         <div class="navbar-item has-dropdown is-hoverable">
           <span class="navbar-link">DX Core
             <span class="icon-wrapper"><i class="arrow down"></i></span>
           </span>
           <div class="navbar-dropdown">
-            <a href="{{{siteRootPath}}}/product-docs/6.3/getting-started-with-magnolia/" class="navbar-item">Get Started</a>
-            <a href="{{{siteRootPath}}}/product-docs/6.3/developing/" class="navbar-item">Developers</a>
-            <a href="{{{siteRootPath}}}/product-docs/6.3/modules/" class="navbar-item">Modules</a>
-            <a href="{{{siteRootPath}}}/product-docs/6.3/developing/api/" class="navbar-item">APIs</a>
-            <a href="{{{siteRootPath}}}/magnolia-cli/4.x/" class="navbar-item">CLI</a>
-            <a href="{{{siteRootPath}}}/product-docs/6.3/authoring/" class="navbar-item">Authors</a>
+            <a href="{{{siteRootPath}}}/product-docs/getting-started-with-magnolia/" class="navbar-item">Get Started</a>
+            <a href="{{{siteRootPath}}}/product-docs/developing/" class="navbar-item">Developers</a>
+            <a href="{{{siteRootPath}}}/product-docs/modules/" class="navbar-item">Modules</a>
+            <a href="{{{siteRootPath}}}/product-docs/developing/api/" class="navbar-item">APIs</a>
+            <a href="{{{siteRootPath}}}/magnolia-cli/" class="navbar-item">CLI</a>
+            <a href="{{{siteRootPath}}}/product-docs/authoring/" class="navbar-item">Authors</a>
           </div>
         </div>
         <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item">DX Cloud</a>
