learn more future proofed

--- a/src/layouts/new-home.hbs
+++ b/src/layouts/new-home.hbs
@@ -475,7 +475,7 @@
               Magnolia's modular architecture is well-suited for building industry-specific solutions that require scalability, reliability and excellent support.
             </p>
             <div class="buttons">
-              <a class="link" href="{{{siteRootPath}}}/product-docs/6.3/">
+              <a class="link" href="{{{siteRootPath}}}/product-docs/">
                 Learn more
               </a>
             </div>
