changelog take code block

--- a/src/layouts/changelog.hbs
+++ b/src/layouts/changelog.hbs
@@ -330,6 +330,17 @@
         margin-right: 8px;
         font-weight: bold;
       }
+
+      .listingblock .title {
+        margin-bottom: -1rem !important;
+        font-weight: bold !important;
+      }
+
+      .listingblock pre {
+        background-color: black !important;
+        color: white !important;
+        padding: 1rem !important;
+      }
       
       @media screen and (max-width: 625px) {
         .toast {
