minor update to home page

--- a/src/layouts/new-home.hbs
+++ b/src/layouts/new-home.hbs
@@ -571,7 +571,7 @@
           <div class="column is-4-widescreen is-6-desktop is-6-tablet">
             <div class="card-x">
               <h3 class="card-x__title h3"><i class="fa fa-code" aria-hidden="true"></i> Develop</h3>
-              <p class="card-x__p">Discover how to integrate and deploy applications on DX Cloud using our dedicated CI/CD pipelines. Configure critical items through our <code><a href="{{{siteRootPath}}}/paas/deployment/helm-values/">values.yml</a></code> file and check out our headless capabilities for rapid development.</p>
+              <p class="card-x__p">Discover how to integrate and deploy applications on DX Cloud using our dedicated CI/CD pipelines. Configure critical items through our <code style="background-color: black !important;"><a href="{{{siteRootPath}}}/paas/deployment/helm-values/">values.yml</a></code> file and check out our headless capabilities for rapid development.</p>
               <div class="card-x__link-w">
                 <a class="card-x__link link" href="{{{siteRootPath}}}/paas/setup/">Learn more</a>
               </div>
