update tier 1 on landing incubate

--- a/src/layouts/incubate-home.hbs
+++ b/src/layouts/incubate-home.hbs
@@ -788,15 +788,15 @@
       <div class="column is-4-widescreen is-6-desktop is-6-tablet">
         <div class="card-x">
           <h3 class="card-x__title h3">
-            <i class="fa fa-picture-o" aria-hidden="true"></i> 
-            Veeva DAM Connector
+            <i class="fa fa-bar-chart" aria-hidden="true"></i> 
+            Instrumentation
           </h3>
           <p class="card-x__p">
-            The Veeva DAM Connector module serves as a DAM connector for Magnolia, enabling seamless integration with Veeva. 
-            Browse assets and use the Veeva dialog to incorporate them directly into your website.
+            The Instrumentation module provides probes for monitoring Magnolia internal metrics and activities over time.
+            Probes are configurable within Magnolia and are easily enabled or disabled as needed.
           </p>
           <div class="card-x__link-w">
-            <a class="card-x__link link" href="{{{siteRootPath}}}/veeva/">
+            <a class="card-x__link link" href="{{{siteRootPath}}}/instrumentation/">
               Learn more
             </a>
           </div>
