vars not coming through algolia overrides

--- a/src/partials/footer-scripts.hbs
+++ b/src/partials/footer-scripts.hbs
@@ -96,7 +96,7 @@
         <button type="button" class="ds-version-filter__btn' + (window.__magnoliaVersionFilter === 'latest' ? ' active' : '') + '" data-version="latest">Latest</button>\
         <button type="button" class="ds-version-filter__btn' + (window.__magnoliaVersionFilter === '6.3' ? ' active' : '') + '" data-version="6.3">6.3</button>\
         <button type="button" class="ds-version-filter__btn' + (window.__magnoliaVersionFilter === '6.2' ? ' active' : '') + '" data-version="6.2">6.2</button>\
-        <button type="button" class="ds-version-filter__btn' + (window.__magnoliaVersionFilter === 'cloud' ? ' active' : '') + '" data-version="cloud">Cloud</button>\
+        <button type="button" class="ds-version-filter__btn' + (window.__magnoliaVersionFilter === 'cloud' ? ' active' : '') + '" data-version="cloud">DX Cloud</button>\
         <button type="button" class="ds-version-filter__btn' + (window.__magnoliaVersionFilter === 'modules' ? ' active' : '') + '" data-version="modules">Modules</button>\
       </div>\
     ';
@@ -271,9 +271,9 @@
 }
 
 .ds-version-filter__btn.active {
-  background: var(--rebrand-color-primary-sand);
-  border-color: var(--rebrand-color-primary-green);
-  color: var(--rebrand-color-primary-teal);;
+  background: #f0eee7;
+  border-color: #068449;
+  color: #02373f;
 }
 
 /* Mobile responsive */
