--- a/src/partials/footer-content.hbs
+++ b/src/partials/footer-content.hbs
@@ -45,10 +45,11 @@
   <br>
   <hr style="background-color: whitesmoke !important;">
   <br>
-  <span>{{{year}}} Magnolia International Ltd. Some rights reserved. Contains AI-assisted content.</span>
+  <span>{{{year}}} Magnolia International Ltd. Some rights reserved.</span>
     <p style="margin-top: 1.25vh;">
         <a href="https://www.magnolia-cms.com/legal/privacy.html" target="_blank" rel="noreferrer, noopener" style="font-size: smaller; margin-right: 1vw;" aria-label="Read Magnolia's official Privacy Policy">Privacy policy</a>
-        <a href="https://www.magnolia-cms.com/legal/accessiblity-statement.html" target="_blank" rel="noreferrer, noopener" style="font-size: smaller;" aria-label="Read Magnolia's official Accessibility Statement">Accessibility statement</a>
+        <a href="https://www.magnolia-cms.com/legal/accessiblity-statement.html" target="_blank" rel="noreferrer, noopener" style="font-size: smaller; margin-right: 1vw;" aria-label="Read Magnolia's official Accessibility Statement">Accessibility statement</a>
+        <a href="{{{siteRootPath}}}/ai-governance/ai-assisted-content/" target="_blank" rel="noreferrer, noopener" style="font-size: smaller;"  aria-label="Read about AI-assisted content in Magnolia documentation"> AI use in documentation </a>
     </p>
 </div>
 {{/if}}
