updating ai governance URL

--- a/src/partials/head-meta.hbs
+++ b/src/partials/head-meta.hbs
@@ -58,8 +58,8 @@
   "mainEntityOfPage": "{{page.canonicalUrl}}",
   {{/if}}
   "inLanguage": "en",
-  "license": "{{or page.attributes.meta-content-usage-url 'https://docs.magnolia-cms.com/content-usage/'}}",
-  "usageInfo": "{{or page.attributes.meta-content-usage-url 'https://docs.magnolia-cms.com/content-usage/'}}",
+  "license": "{{or page.attributes.meta-content-usage-url 'https://docs.magnolia-cms.com/ai-governance/'}}",
+  "usageInfo": "{{or page.attributes.meta-content-usage-url 'https://docs.magnolia-cms.com/ai-governance/'}}",
   "copyrightHolder": {
     "@type": "Organization",
     "name": "{{or page.attributes.meta-copyright-holder 'Magnolia International Ltd'}}"
